clusters/arcanis/plex/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex
  namespace: plex
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: plex
  template:
    metadata:
      labels:
        app: plex
    spec:
      containers:
      - name: plex
        image: linuxserver/plex:1.42.2
        ports:
        - containerPort: 32400
          hostPort: 32400
          name: http
          protocol: TCP
        - containerPort: 32410
          hostPort: 32410
          name: gdm-1
          protocol: UDP
        - containerPort: 32412
          hostPort: 32412
          name: gdm-2
          protocol: UDP
        - containerPort: 32413
          hostPort: 32413
          name: gdm-3
          protocol: UDP
        - containerPort: 32414
          hostPort: 32414
          name: gdm-4
          protocol: UDP
        volumeMounts:
        - name: config
          mountPath: /config
        - name: media
          mountPath: /media
        - name: private
          mountPath: /private
        - name: dri
          mountPath: /dev/dri
      volumes:
      - name: config
        hostPath:
          path: /storage/appdata/plex/app
          type: Directory
      - name: media
        hostPath:
          path: /storage/media
          type: Directory
      - name: private
        hostPath:
          path: /storage/private
          type: Directory
      - name: dri
        hostPath:
          path: /dev/dri
          type: Directory
